--- a/sass/blocks/_hot.sass
+++ b/sass/blocks/_hot.sass
@@ -63,6 +63,8 @@
       color: $light
       mix-blend-mode: normal
       opacity: 0.4
+  &-slide
+    padding: 50px    
   &__pin
     position: absolute
     top: 18px
@@ -188,7 +190,7 @@
         
   &-slide
     position: relative 
-    padding: 50px 
+     
     &:after
       content: ""
       position: absolute
