--- a/sass/blocks/_subscribe.sass
+++ b/sass/blocks/_subscribe.sass
@@ -41,9 +41,12 @@
     justify-content: space-between
     align-items: flex-start 
     position: relative
-    & label
-      position: absolute
-      top: 45px
-      left: 15px
-      font-size: 12px
-      line-height: 130%
+    
+      
+.error
+  position: absolute
+  top: 45px
+  left: 15px
+  font-size: 14px
+  line-height: 130%
+  color: $red75
