--- a/sass/style.sass
+++ b/sass/style.sass
@@ -26,5 +26,19 @@
 @import 'article/article-main'
 //Подключаем стили article-begin
 @import 'article/article-begin'
+//Подключаем стили article-photo
+@import 'article/article-photo'
+//Подключаем стили article-aside
+@import 'article/article-aside'
+//Подключаем стили article-quote
+@import 'article/article-quote'
+//Подключаем стили sharing
+@import 'article/sharing'
+//Подключаем стили gallery
+@import 'article/gallery'
+//Подключаем стили comments
+@import 'article/comments'
+//Подключаем стили submit
+@import 'article/submit'
 //Подключение стилей для адаптива
 @import 'media'
