--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,4 +1,16 @@
 @media (max-width: 1200px)
+  .aside
+    display: none
+  .article-quote
+    display: none  
+  .sharing
+    display: none
+  .gallery
+    display: none
+  .comments
+    display: none
+  .submit
+    display: none      
   .container
     max-width: 960px 
   .content
@@ -54,8 +66,20 @@
       font-size: 38px
   .subscribe
     &__title
-      font-size: 38px    
+      font-size: 38px   
+
+  .main
+    &-bookmark
+      display: none
+@media (max-width: 1025px )
+  .main
+    &-info
+      &__title
+        font-size: 45px 
+           
 @media (max-width: 1005px)
+ 
+    
   .container
     max-width: 800px  
   .header
@@ -134,11 +158,27 @@
   .footer
     &-menu
       &__block
-        padding-right: 15px    
+        padding-right: 15px   
+  .text
+    &-container
+      max-width: 500px  
+  .article 
+    &-photo
+      &__text
+        padding: 15px 10px         
 @media (max-width: 992px)
+  .main
+    &-container
+      max-width: 100%
+      width: 100%
+    &-bookmark
+      display: none
   .button
     &:hover      
       background: $blue75
+    &-shares
+      &:hover
+        background: transparent
   .infobox
     &-card
       &:hover
@@ -217,6 +257,29 @@
   .youtube             
     &:hover
       background: #FF0000
+  .card
+    &-author
+      &__facebook
+        &:hover
+          background: transparent
+      &__twitter
+        &:hover
+          background: transparent
+      &__instagram
+        &:hover
+          background: transparent    
+      &__follow
+        &:hover
+          background: transparent    
+
+@media ( max-width: 920px  )
+  .main
+    &-info
+      &__title
+        font-size: 40px 
+      &__text
+        font-size: 16px   
+        margin-bottom: 30px   
 @media (max-width: 880px)
   .container
     max-width: 700px  
@@ -357,6 +420,38 @@
       &__social
         width: 100%
         justify-content: flex-end
+
+  .main 
+    &-info
+      &__title
+        font-size: 30px 
+      &__text
+        width: 100%
+        font-size: 16px  
+        margin-bottom: 40px 
+  .jump
+    &__text
+      font-size: 12px   
+  .text
+    &-container
+      max-width: 100%
+    &__p
+      font-size: 16px    
+  .card
+    &-author
+      position: relative
+      top: auto
+      right: auto
+      float: right 
+      margin-left: 15px  
+      margin-top: 15px  
+  .article
+    &-slider
+      height: 455px       
+      &__button
+        width: 45px
+        height: 45px     
+        border-radius: 50%  
 @media (max-width: 768px)
   .container
     max-width: 600px
@@ -545,11 +640,47 @@
         margin-bottom: 8px
       &__social
         margin-top: 20px  
-      
+  .main
+    &-info
+      &__bottom
+        flex-direction: column
+        justify-content: center
+        align-items: flex-start
+  .button
+    &-shares       
+      margin-top: 15px
   .modal
     &__video
       width: 440px
       height: 250px
+  .card
+    &-author
+      float: none 
+      margin: auto
+  .article
+    &-slider
+      height: 350px
+      &__button
+        width: 35px
+        height: 35px
+    &-photo
+      &__bottom
+        flex-direction: column 
+        align-items: flex-start 
+      &__info
+        display: flex
+        flex-direction: column
+        align-items: flex-start
+      &__text
+        padding: 10px 15px
+        border-bottom: 1px solid $grey15
+      &__author
+        width: 100%
+        padding: 5px 15px 12px 15px
+        border-left: 1px solid transparent
+        display: flex
+        justify-content: flex-start
+        align-items: center
 @media (max-width: 595px)
   
   .recommended
@@ -582,7 +713,13 @@
   .infobox
     &-wrapper
       grid-gap: 20px
-      grid-row-gap: 30px  
+      grid-row-gap: 30px 
+  .article
+    &-slider
+      height: 300px
+      &__button
+        width: 30px
+        height: 30px     
 @media ( max-width: 450px )
   .infobox
     &-wrapper
@@ -631,7 +768,14 @@
     &-slider
       &__title
         font-size: 38px     
-              
+  .main
+    &-info
+      padding-top: 30px
+      &__title
+        margin-top: 30px
+  .jump
+    left: 0
+    right: auto                    
 @media (max-width: 438px)
   .selection
     height: 550px         
@@ -639,7 +783,16 @@
     &-menu
       &__block
         width: 50%
-          
+  .article
+    &-slider
+      height: 250px
+      &__button
+        width: 30px
+        height: 30px  
+      &--prev
+        left: 25px
+      &--next
+        right: 25px            
 @media (max-width: 390px)  
  
   .search
@@ -689,6 +842,7 @@
       &__social
         justify-content: flex-start
         margin-left: 0  
+     
 @media ( max-width: 340px )
   .list
     &-item   
