--- a/sass/article/_article-begin.sass
+++ b/sass/article/_article-begin.sass
@@ -1,8 +1,9 @@
 .article
   &-begin
     padding-top: 60px
-    padding-bottom: 60px
+    padding-bottom: 0
     background: $light
+    position: relative
 .card
   &-author
     position: absolute
@@ -101,7 +102,7 @@
         background: $hovercard
 .text
   &-container
-    max-width: 600px
+    max-width: 630px
   &__initial
     float: left
     margin-right: 10px
@@ -116,6 +117,8 @@
     line-height: 167%
     color: $grey85
   &__title
+    margin-bottom: 30px
+    margin-top: 30px
     font-family: 'Roboto Slab', serif
     font-style: normal
     font-weight: bold
