--- a/sass/article/_article-quote.sass
+++ b/sass/article/_article-quote.sass
@@ -30,8 +30,8 @@
       color: $grey100
       position: relative
       z-index: 1
-      &:before  
-        content: url('../img/article-travel/quote.svg')
+      &:after          
+        content: url('../img/article-travel/Quote.svg')
         position: absolute
         top: -20px
         left: -20px
