--- a/sass/article/_article-aside.sass
+++ b/sass/article/_article-aside.sass
@@ -3,13 +3,18 @@
   padding-top: 30px
   &-container
     display: flex
+    flex-direction: column
     justify-content: space-between
-    align-items: flex-end
+    align-items: flex-start
+    flex-wrap: wrap  
   &__column
+    position: absolute
+    bottom: 50px
+    right: 0
     margin-left: 60px 
     width: 263px
-    margin-bottom: 50px
   &-column
+    order: 2
     display: flex
     flex-direction: column
     justify-content: space-between
@@ -62,4 +67,7 @@
       &-comment
         display: flex
         justify-content: space-between
-        align-items: center    
+        align-items: center 
+      &-number
+        color: $grey50   
+
