--- a/sass/article/_article-photo.sass
+++ b/sass/article/_article-photo.sass
@@ -26,12 +26,17 @@
       display: flex
       justify-content: space-between
       align-items: center
+      &-link
+        display: block
+        min-width: 45px
+        height: 45px
+        border-radius: 50%
+        overflow: hidden        
+        margin-right: 10px   
     &__avatar
-      width: 45px
-      height: 45px
-      border-radius: 50%
-      object-fit: cover  
-      margin-right: 10px
+      width: 100%
+      height: 100%
+      object-fit: cover
     &__name
       font-style: normal
       font-weight: normal
