--- a/sass/article/_article-quote.sass
+++ b/sass/article/_article-quote.sass
@@ -15,6 +15,8 @@
         font-size: 14px
         line-height: 143%
         color: $grey100
+        &:hover
+          background: $hovercard         
 .block
   &-quote    
     display: flex
