--- a/sass/article/_gallery.sass
+++ b/sass/article/_gallery.sass
@@ -2,10 +2,12 @@
   padding-top: 60px
   padding-bottom: 90px
   &-block
+    width: 100%
     display: flex
     justify-content: space-between
-    align-items: center
+    align-items: flex-start
     &__item
+      flex: 1
       display: flex
       flex-direction: column
       justify-content: space-between
@@ -22,8 +24,9 @@
       line-height: 165%
       color: $grey100
       &-img
-        width: 263px
-        height: 180px
+        display: block
+        min-width: 100%
+        min-height: 100%
         border-radius: 10px
         overflow: hidden
     &__img
