--- a/sass/article/_sharing.sass
+++ b/sass/article/_sharing.sass
@@ -25,6 +25,8 @@
     display: flex
     justify-content: space-between
     align-items: center
+    &:hover
+      background: $orange75
   &__facebook
     background: #4267B2
     border-radius: 20px
