--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -505,7 +505,25 @@
       &__menu
         flex: none 
     &-bottom
-      font-size: 12px    
+      font-size: 12px  
+  .block
+    &-quote
+      flex-direction: column
+      justify-content: space-between
+      align-items: flex-start
+      &__author
+        margin-top: 15px
+        margin-left: 0
+        flex-direction: row 
+        flex-wrap: wrap     
+      &__avatar
+        margin-right: 10px  
+  .submit
+    &__textarea
+      width: 450px
+  .comments
+    &__text
+      font-size: 16px    
 @media (max-width: 640px)
   .container
     max-width: 440px 
@@ -695,7 +713,46 @@
     &-block
       &__item
         width: 100%    
-        margin-bottom: 40px    
+        margin-bottom: 40px 
+  .sharing
+    &-block
+      flex-wrap: wrap
+    &__dots
+      margin-top: 10px
+    &__facebook
+      margin-top: 10px
+    &__like
+      margin-top: 10px
+    &__tweet
+      margin-top: 10px 
+  .submit
+    &-block
+      flex-direction: column
+      align-items: center
+      &:after
+        content: ""
+        width: 0
+        height: 0
+        border-style: solid
+        border-width: 10px 0 10px 12px
+        border-color: transparent transparent transparent transparent 
+    &__avatar
+      margin-bottom: 10px  
+    &__textarea
+      max-width: 370px 
+    &-form
+      align-items: center
+    &__button
+      margin-left: 0  
+    &__title
+      margin-left: 0
+  .comments
+    &__text
+      font-size: 14px    
+    &__title
+      font-size: 30px 
+    &__count
+      font-size: 30px
 @media (max-width: 595px)
   
   .recommended
@@ -735,6 +792,25 @@
       &__button
         width: 30px
         height: 30px     
+  .article
+    &-quote
+      &__blocks
+        flex-wrap: wrap
+        &-item
+          margin-top: 10px  
+  .comments
+    &-title
+      flex-direction: column
+      align-items: flex-start
+      margin-bottom: 10px
+    &__title
+      margin-bottom: 10px
+    &-author
+      width: 55px
+      height: 55px  
+    &__answer
+      padding-left: 70px    
+
 @media ( max-width: 450px )
   .infobox
     &-wrapper
@@ -790,7 +866,13 @@
         margin-top: 30px
   .jump
     left: 0
-    right: auto                    
+    right: auto      
+  .submit
+    &-block
+      width: 100%
+    &__textarea
+      max-width: 100%
+
 @media (max-width: 438px)
   .selection
     height: 550px         
@@ -862,7 +944,12 @@
       &__social
         justify-content: flex-start
         margin-left: 0  
-     
+  .comments
+    &-author
+      width: 45px
+      height: 45px  
+    &__answer
+      padding-left: 60px    
 @media ( max-width: 340px )
   .list
     &-item   
