--- a/sass/article/_article-quote.sass
+++ b/sass/article/_article-quote.sass
@@ -45,6 +45,11 @@
       flex-direction: column
       justify-content: flex-start
       align-items: flex-start 
+      &-info
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        align-items: flex-start
     &__avatar
       width: 60px
       height: 60px
